# dopamine-framework

./: .gitignore  .releaserc.json  CHANGELOG.md  NOTICE  README.md  pyproject.toml  releaserc.json
.github/workflows/: publish.yml  release.yml
DOCUMENTATION/: bot.md  checks.md  dopamine_commands.md  log.md  paginator.md  preconditions.md  timeparser.md  views.md
examples/: main.py
src/: dopamine_framework.py
src/dopamine_framework/: __init__.py  bot.py
src/dopamine_framework/core/: dashboard.py
src/dopamine_framework/ext/: diagnostics.py  path.py
src/dopamine_framework/utils/: __init__.py  checks.py  log.py  paginator.py  views.py
src/dopamineframework/: __init__.py  bot.py
src/dopamineframework/core/: commands_registry.py  dashboard.py  dopamine_commands.py  errors.py  preconditions.py
src/dopamineframework/ext/: diagnostics.py  path.py
src/dopamineframework/utils/: paginator.py  timeparser.py  views.py
