[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dopamine-framework"
version = "1.0.1"
authors = "likerofturtles"
description = "Initialize a production-ready Discord.py bot in just 4 lines of code. Smart and automated command syncing, easy-to-use in-Discord dashboard, logging backend, and more. Made by likerofturtles"
readme = "README.md"
dependencies = [
    "discord.py>=2.0.0",
    "aiosqlite",
    "psutil",
    "pillow",
    "geocoder"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"dopamine_framework.ext" = ["*.ttf"]