[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dopamine-framework"
version = "1.4.14"
authors = [{name = "likerofturtles"}]
description = "Initialize a production-ready Discord.py bot in just 4 lines of code. Smart and automated command syncing, easy-to-use in-Discord dashboard, logging backend, and more. Made by likerofturtles"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.6.4",
    "aiosqlite",
    "psutil",
    "pillow",
    "geocoder"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"dopamine_framework.ext" = ["*.ttf"]
